# CP_ShanyunYang

./: CI.yml  CMakeLists.txt  Exercise of Week #2 Python code  Ising model.sln  Ising spin.hpp  Ising system  Ising1.cpp  IsingSystem.hpp  Ising_Homework_Week_5_C++  Ising_py_Homework_Week_5  Isingspins.hpp  Isingsystems.hpp  Isingsystemstest.cpp  README.md  UnitTest1.cpp  Unitteset_for_kagome.cpp  Unittest_for_Cubic.cpp  Unittest_for_honeycomb
